re PR c++/8564 (ICE in find_function_data, at function.c:329)

PR c++/8564
        * init.c (build_vec_init): Re-add maxindex parm.
        (perform_member_init, build_aggr_init): Pass it.
        (build_new_1): Pass it. Use an incomplete array type for full_type.
        * typeck.c (build_modify_expr): Pass it.
        * cp-tree.h: Adjust.

From-SVN: r61422