gcc/cp/init.c
@@ -352,7 +352,8 @@ perform_member_init (tree member, tree init)
 	  && TREE_CODE (TREE_TYPE (TREE_VALUE (init))) == ARRAY_TYPE)
 	{
 	  /* Initialization of one array from another.  */
-	  finish_expr_stmt (build_vec_init (decl, TREE_VALUE (init), 1));
+	  finish_expr_stmt (build_vec_init (decl, NULL_TREE, TREE_VALUE (init),
+					    /* from_array=*/1));
 	}
       else
 	finish_expr_stmt (build_aggr_init (decl, init, 0));
@@ -1101,7 +1102,7 @@ build_aggr_init (exp, init, flags)
 	TREE_TYPE (exp) = TYPE_MAIN_VARIANT (type);
       if (itype && cp_type_quals (itype) != TYPE_UNQUALIFIED)
 	TREE_TYPE (init) = TYPE_MAIN_VARIANT (itype);
-      stmt_expr = build_vec_init (exp, init,
+      stmt_expr = build_vec_init (exp, NULL_TREE, init,
 				  init && same_type_p (TREE_TYPE (init),
 						       TREE_TYPE (exp)));
       TREE_READONLY (exp) = was_const;
@@ -2138,6 +2139,7 @@ build_new_1 (exp)
   tree placement, init;
   tree type, true_type, size, rval, t;
   tree full_type;
+  tree outer_nelts = NULL_TREE;
   tree nelts = NULL_TREE;
   tree alloc_call, alloc_expr, alloc_node;
   tree alloc_fn;
@@ -2167,12 +2169,11 @@ build_new_1 (exp)
   if (TREE_CODE (type) == ARRAY_REF)
     {
       has_array = 1;
-      nelts = TREE_OPERAND (type, 1);
+      nelts = outer_nelts = TREE_OPERAND (type, 1);
       type = TREE_OPERAND (type, 0);
 
-      full_type = cp_build_binary_op (MINUS_EXPR, nelts, integer_one_node);
-      full_type = build_index_type (full_type);
-      full_type = build_cplus_array_type (type, full_type);
+      /* Use an incomplete array type to avoid VLA headaches.  */
+      full_type = build_cplus_array_type (type, NULL_TREE);
     }
   else
     full_type = type;
@@ -2362,7 +2363,11 @@ build_new_1 (exp)
 	pedwarn ("ISO C++ forbids initialization in array new");
 
       if (has_array)
-	init_expr = build_vec_init (init_expr, init, 0);
+	init_expr
+	  = build_vec_init (init_expr,
+			    cp_build_binary_op (MINUS_EXPR, outer_nelts,
+						integer_one_node),
+			    init, /*from_array=*/0);
       else if (TYPE_NEEDS_CONSTRUCTING (type))
 	init_expr = build_special_member_call (init_expr, 
 					       complete_ctor_identifier,
@@ -2686,6 +2691,9 @@ get_temp_regvar (type, init)
    initialization of a vector of aggregate types.
 
    BASE is a reference to the vector, of ARRAY_TYPE.
+   MAXINDEX is the maximum index of the array (one less than the
+     number of elements).  It is only used if
+     TYPE_DOMAIN (TREE_TYPE (BASE)) == NULL_TREE.
    INIT is the (possibly NULL) initializer.
 
    FROM_ARRAY is 0 if we should init everything with INIT
@@ -2696,8 +2704,8 @@ get_temp_regvar (type, init)
    but use assignment instead of initialization.  */
 
 tree
-build_vec_init (base, init, from_array)
-     tree base, init;
+build_vec_init (base, maxindex, init, from_array)
+     tree base, init, maxindex;
      int from_array;
 {
   tree rval;
@@ -2717,9 +2725,11 @@ build_vec_init (base, init, from_array)
   tree try_block = NULL_TREE;
   tree try_body = NULL_TREE;
   int num_initialized_elts = 0;
-  tree maxindex = array_type_nelts (TREE_TYPE (base));
 
-  if (maxindex == error_mark_node)
+  if (TYPE_DOMAIN (atype))
+    maxindex = array_type_nelts (atype);
+
+  if (maxindex == NULL_TREE || maxindex == error_mark_node)
     return error_mark_node;
 
   if (init
@@ -2909,7 +2919,7 @@ build_vec_init (base, init, from_array)
 	    sorry
 	      ("cannot initialize multi-dimensional array with initializer");
 	  elt_init = build_vec_init (build1 (INDIRECT_REF, type, base),
-				     0, 0);
+				     0, 0, 0);
 	}
       else
 	elt_init = build_aggr_init (build1 (INDIRECT_REF, type, base), 
